k8s/backend/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: sbuasa
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8000
